create base layout

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
-  text-align: center;
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+ul {
+  list-style: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-family: 'Roboto', sans-serif;
+  background-image: radial-gradient(circle, #ffffff, #814043); ;
 }
 
-.App-header {
-  background-color: #282c34;
+#root {
+  padding: 1.6rem 3.5rem;
+  display: grid;
+  grid-template-rows: 100px auto ;
+  grid-gap:10px;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  max-width: 100vw;
 }
 
-.App-link {
-  color: #61dafb;
+.header {
+  background: rgb(112, 8, 8);
+  padding: 2em;  
+  text-align: center;
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header__title {
+  text-transform: uppercase;
+  color: aliceblue;
+  font-size: 1.5rem;
 }
