--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ body {
 #root {
   padding: 1.6rem 3.5rem;
   display: grid;
-  grid-template-rows: 100px auto ;
+  grid-template-rows: 100px auto auto ;
   grid-gap:10px;
   min-height: 100vh;
   max-width: 100vw;
