--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ body {
 #root {
   padding: 1.6rem 3.5rem;
   display: grid;
-  grid-template-rows: 100px auto auto ;
+  grid-template-rows: 100px auto auto auto ;
   grid-gap:10px;
   min-height: 100vh;
   max-width: 100vw;
@@ -36,4 +36,18 @@ body {
   text-transform: uppercase;
   color: aliceblue;
   font-size: 1.5rem;
+}
+.loader {
+  border: 16px solid #a99595; /* Light grey */
+  border-top: 16px solid #70080830; /* Blue */
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 2s linear infinite;
+  justify-self: center;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
